# frederika

./: Cargo.toml  README.md  example_Config.toml
src/: attachment.rs  cli.rs  config.rs  main.rs  msg_cache.rs  util.rs
