[package]
name = "frederika"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
google-gemini = { git = "https://github.com/cult-of-mari/claide.git", version = "0.0.0" }
log = "0.4.22"
markdown = "1.0.0-alpha.21"
reqwest = { version = "0.12.11", features = ["socks"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
